[project]
name = "cerberus"
version = "0.0.1-beta"
description = "A user-friendly HTTP(s) brute-forcing tool featuring customizable plugin functionality and support for standard proxies and Tor anonymity network."
authors = [
    {name = "kayake", email = "kayake.dev@gmail.com"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "requests[socks] (>=2.32.3,<3.0.0)",
    "prompt-toolkit (>=3.0.50,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "stem (>=1.8.2,<2.0.0)",
    "ua-generator (>=2.0.1,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
