[project]
name = "cerberus"
version = "1.0.0"
description = "A user-friendly HTTP(s) brute-forcing tool featuring customizable plugin functionality, proxy support, encompassing both standard proxies and Tor and Mutiple Wordlists Attack."
authors = [
    {name = "kayake", email = "kayake.dev@gmail.com"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">= 3.9"
dependencies = [
    "aiohttp (>=3.11.14,<4.0.0)", 
    "aiofiles (>=24.1.0,<25.0.0)", 
    "pyyaml (>=6.0.2,<7.0.0)", 
    "uvloop (>=0.21.0,<0.22.0)", 
    "asyncio (>=3.4.3,<4.0.0)", 
    "stem (>=1.8.2,<2.0.0)", 
    "ua-generator (>=2.0.3,<3.0.0)", 
    "packaging (>=24.2,<25.0)", 
    "logging (>=0.4.9.6,<0.5.0.0)", 
    "pathlib (>=1.0.1,<2.0.0)", 
    "argparse (>=1.4.0,<2.0.0)", 
    "plyvel (>=1.5.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
